tests/ui/nested_option.jet
fn f() -> Int?? {
    return value(1);
}

fn main() {
    print(f());
}
